[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/model/enemy_parent.mesh" type="ArrayMesh" id=1]
[ext_resource path="res://source/entity/enemy/EnemyParent.gd" type="Script" id=2]
[ext_resource path="res://assets/entity/state_controller.tscn" type="PackedScene" id=3]
[ext_resource path="res://resource/player.tres" type="Resource" id=4]
[ext_resource path="res://source/entity/enemy/EnemyStateMove.gd" type="Script" id=5]
[ext_resource path="res://source/entity/enemy/EnemyStateSeek.gd" type="Script" id=6]
[ext_resource path="res://source/entity/enemy/EnemyStateLook.gd" type="Script" id=7]
[ext_resource path="res://assets/texture/materials/lily_pawn_lime.tres" type="Material" id=8]
[ext_resource path="res://assets/gui/gui_debug_healthbar.tscn" type="PackedScene" id=9]

[sub_resource type="BoxShape" id=2]

[sub_resource type="BoxShape" id=8]

[sub_resource type="BoxShape" id=6]

[sub_resource type="Animation" id=7]
resource_name = "Move"

[node name="EnemyParent" type="KinematicBody" groups=["enemy", "target"]]
collision_layer = 15
collision_mask = 15
script = ExtResource( 2 )
resource = ExtResource( 4 )

[node name="StateController" parent="." instance=ExtResource( 3 )]

[node name="Move" type="Node" parent="StateController"]
script = ExtResource( 5 )

[node name="Seek" type="Node" parent="StateController"]
script = ExtResource( 6 )

[node name="Look" type="Node" parent="StateController"]
script = ExtResource( 7 )

[node name="Model" type="MeshInstance" parent="."]
layers = 4
mesh = ExtResource( 1 )
material/0 = ExtResource( 8 )

[node name="Collision" type="CollisionShape" parent="."]
transform = Transform( 0.8, 0, 0, 0, 1, 0, 0, 0, 0.484, 0, 1, 0 )
shape = SubResource( 2 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 0.8, 0, 0, 0, 1, 0, 0, 0, 0.5, 0, 1, 0 )
shape = SubResource( 8 )

[node name="ViewArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="ViewArea"]
transform = Transform( 3.53553, 0, 3.53553, 0, 1, 0, -2.75772, 0, 2.75772, 0, 1, -6 )
shape = SubResource( 6 )

[node name="CollisionShape2" type="CollisionShape" parent="ViewArea"]
transform = Transform( 0, 0, 7, 0, 1, 0, -2.99376, 0, 0, 0, 1, -9 )
shape = SubResource( 6 )

[node name="NavigationAgent" type="NavigationAgent" parent="."]
path_max_distance = 6.0
avoidance_enabled = true
radius = 3.0

[node name="LookingTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("")
anims/Move = SubResource( 7 )

[node name="FollowTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="DebugHealthBar" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0 )

[node name="OmniLight" type="OmniLight" parent="."]
layers = 0
light_cull_mask = 4294967287

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="body_entered" from="ViewArea" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="ViewArea" to="." method="_on_Area_body_exited"]
[connection signal="velocity_computed" from="NavigationAgent" to="." method="_on_NavigationAgent_velocity_computed"]
[connection signal="timeout" from="LookingTimer" to="." method="_on_LookingTimer_timeout"]
[connection signal="timeout" from="FollowTimer" to="." method="_on_FollowTimer_timeout"]
